--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,10 +13,10 @@
         android:text="@string/btn_start_scan_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.844" />
+        app:layout_constraintVertical_bias="0.778" />
 
     <TextView
         android:id="@+id/lbl_scan_results"
@@ -33,12 +33,25 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_found_devices"
-        android:layout_width="375dp"
-        android:layout_height="516dp"
+        android:layout_width="374dp"
+        android:layout_height="423dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_start_scan"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.444"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lbl_scan_results"
         app:layout_constraintVertical_bias="0.0" />
+
+    <Button
+        android:id="@+id/btn_graph"
+        android:layout_width="125dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="40dp"
+        android:text="Switch to graph"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_start_scan" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
