--- a/app/src/main/res/layout/device_row_layout.xml
+++ b/app/src/main/res/layout/device_row_layout.xml
@@ -13,4 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
+
+    <Button
+        android:id="@+id/btn_connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="32dp"
+        android:text="Connect" />
 </LinearLayout>
