Characteristics not printing

--- a/app/src/main/res/layout/characteristic_row_layout.xml
+++ b/app/src/main/res/layout/characteristic_row_layout.xml
@@ -7,18 +7,21 @@
     android:paddingTop="10dp"
     android:paddingBottom="10dp"
     >
+
     <TextView
-        android:id="@+id/device_name"
+        android:id="@+id/service_uuid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Service UUID"
+        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textStyle="bold"
+        android:paddingBottom="8dp" />
+
+    <TextView
+        android:id="@+id/characteristc_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         />
 
-    <Button
-        android:id="@+id/btn_connect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:layout_marginEnd="32dp"
-        android:text="@string/connect" />
 </LinearLayout>
