--- a/app/src/main/res/layout/characteristic_row_layout.xml
+++ b/app/src/main/res/layout/characteristic_row_layout.xml
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    >
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/service_uuid"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Service UUID"
-        android:textAppearance="?attr/textAppearanceSubtitle1"
+        android:textSize="16sp"
         android:textStyle="bold"
-        android:paddingBottom="8dp" />
+        android:textColor="@android:color/darker_gray" />
 
     <TextView
         android:id="@+id/characteristc_name"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
-
+        android:textSize="14sp"
+        android:textColor="@android:color/darker_gray"
+        android:paddingTop="4dp" />
 </LinearLayout>
