--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,17 +42,17 @@
         app:layout_constraintTop_toBottomOf="@+id/lbl_scan_results"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/btn_graph"
-        android:layout_width="125dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="40dp"
-        android:text="Switch to graph"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_start_scan" />
+<!--    <Button-->
+<!--        android:id="@+id/btn_graph"-->
+<!--        android:layout_width="125dp"-->
+<!--        android:layout_height="56dp"-->
+<!--        android:layout_marginTop="40dp"-->
+<!--        android:text="Switch to graph"-->
+<!--        android:visibility="visible"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.48"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/btn_start_scan" />-->
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
