--- a/app/src/main/res/layout/device_row_layout.xml
+++ b/app/src/main/res/layout/device_row_layout.xml
@@ -20,5 +20,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="32dp"
-        android:text="@string/connect" />
+        android:text="@string/select" />
 </LinearLayout>
